--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,18 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start":"node app.js",
-    "dev":"nodemon app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-validator": "^6.14.2",
+    "mongoose": "^6.7.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
